tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__PoweroftheSunatH-AAAAAAAAAAAAAAAAAAAD7g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1006,
  "prerequisites": [
    1890,
    934,
    861,
    1005
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The next solar panel you can make is the HV one. It generates 512 EU/t. First you need to produce enriched sunnarium by mixing irradiated uranium and sunnarium. The Avaritia 9x9 dire crafting table is required to make this and later panels.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lPower of the Sun at HV Level",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1890,
    934,
    861,
    1005
  ],
  "rewards": [],
  "tasks": []
}
