tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__PoweroftheSunatM-AAAAAAAAAAAAAAAAAAAD6w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1003,
  "prerequisites": [
    3078,
    934
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The next solar panel you can make is the MV one. It gives 128 EU/t. You'll need to make some sunnarium first though.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lPower of the Sun at MV Level",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3078,
    934
  ],
  "rewards": [],
  "tasks": []
}
